GNOME Bugzilla – Bug 660773
Mutter clips windows with decorations removed
Last modified: 2011-10-04 11:50:19 UTC
Created attachment 198069 [details] Screenshot of the problem. When window decorations are removed by setting the _MOTIF_WM_HINTS property on windows, mutter does indeed remove the borders by incorrectly keeps clipping the window with the decoration mask. Steps to reproduce: 1. Launch, e.g., gnome-calculator. 2. Remove decorations via: xprop -name 'Calculator' -f _MOTIF_WM_HINTS 32c -set _MOTIF_WM_HINTS "0x2, 0x0, 0x0, 0x0, 0x0" Results: See attached file. Left and top of window is clipped off. Expected results: A rectangular window. Note: I make use of this technique (via devilspie) to keep a Xephyr window on one desktop running an old GNOME session in a VM for development. At the moment I have a 'magic border' of ~10px around the top-left which is still active and goes through to the underlying Xephyr but is clipped by mutter. Very odd!
* ... remove the borders borders _but_ incorrectly keeps ... -ENOPROOFREAD :(
Created attachment 198080 [details] [review] frame: destroy window->frame_bounds when destroying the frame Since window->frame_bounds is used as a cache we need to invalidate it when destroying the frame.
Review of attachment 198080 [details] [review]: Looks good to me.
Attachment 198080 [details] pushed as 9f54f1d - frame: destroy window->frame_bounds when destroying the frame